# COMP3520ComputerGraphics

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE.iosevka.txt  LICENSE.md  README.md  main.cpp  main.data  main.js  main.wasm
build-wasm/: build-with-emscripten.sh  deploy.sh
docs/: main.data  main.js  main.wasm
